--- a/front-end/front-end/src/app/album/style.module.css
+++ b/front-end/front-end/src/app/album/style.module.css
@@ -6,14 +6,13 @@
 .main
 {
     width: 100%;
-    margin-left: auto;
-    margin-right: auto;
     max-width: 1175px;
     height: fit-content;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    background-color: rgb(56, 55, 55);
+    align-items: stretch;
     margin-top: 20px;
     border-radius: 5px;
+    margin-left: auto;
+    margin-right: auto;
 }
