--- a/front-end/front-end/src/components/list_albuns/list_album/style.module.css
+++ b/front-end/front-end/src/components/list_albuns/list_album/style.module.css
@@ -3,30 +3,43 @@
 
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-around;
     width: 100%;
-    gap: 40px;
+    max-width: 1040px;
     background-color: rgb(56, 55, 55);
+    border-radius: 5px;
+    margin-left: auto;
+    margin-right: auto;
     padding: 10px;
+    gap: 20px;
+    margin-bottom: 20px;
 }
 .discription
 {
     display: flex;
+    width: 48%;
     max-width: 600px;
     flex-direction: column;
     gap: 50px;
 }
 .photos
 {
+    position: relative;
     width: 100%;
-    max-width: 1175px;
+    max-width: 1040px;
+    padding: 10px;
+    background-color: rgb(56, 55, 55);
     display: flex;
     flex-wrap: wrap;
     justify-content: start;
-    margin-top: 15px;
-    padding: 10px;
-    background-color: white;
-    gap: 15px;
+    margin-left: auto;
+    margin-right: auto;
+    gap: 25px 10px;
+    border-radius: 5px;
+}
+.img
+{
+    border-radius: 5px;
 }
 .title
 {
@@ -35,19 +48,39 @@
 
 .bottom
 {
-
+    position: relative;
+    display: flex;
+    justify-content: flex-end;
+    gap: 20px;
+    width: 100%;
+    padding: 15px;
+    max-width: 1060px;
+    margin-left: auto;
+    margin-right: auto;
+    
 }
 .delete_button
 {
-    width: 110px;
+    width: 120px;
     cursor: pointer;
     background-color: rgb(255, 80, 80);
     padding: 15px;
-    margin-left: auto;
-    margin-top: 15px;
+    margin-top: 10px;
     border-radius: 5px;
 }
 .delete_button:hover
 {
     background-color: rgb(255, 0, 0);
+}
+.edit_button
+{
+    width: 110px;
+    cursor: pointer;
+    background-color: rgb(100, 80, 255);
+    padding: 15px;
+    margin-top: 10px;
+    border-radius: 5px;
+}
+.edit_button:hover{
+    background-color: rgb(65, 40, 250);
 }
