--- a/front-end/src/app/user/style.module.css
+++ b/front-end/src/app/user/style.module.css
@@ -2,7 +2,6 @@
 {
     display: flex;
     flex-direction: column;
-    gap: 15px;
 }
 .main
 {
@@ -10,6 +9,11 @@
     margin-left: auto;
     margin-right: auto;
     max-width: 1175px;
-    margin-top: 20px;
     height: fit-content;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: rgb(56, 55, 55);
+    margin-top: 20px;
+    border-radius: 5px;
 }
