--- a/front-end/src/components/header/user/style.module.css
+++ b/front-end/src/components/header/user/style.module.css
@@ -3,6 +3,13 @@
     display: flex;
     align-items: center;
     gap: 10px;
+    border-radius: 5px;
+    cursor: pointer;
+    padding: 2px;
+}
+.user_block:hover
+{
+    background-color: #4d4d4d;
 }
 .user_image
 {
