--- a/front-end/src/components/list_albuns/list_album/style.module.css
+++ b/front-end/src/components/list_albuns/list_album/style.module.css
@@ -3,6 +3,7 @@
 
     display: flex;
     flex-wrap: wrap;
+    position: relative;
     justify-content: space-around;
     width: 100%;
     max-width: 1040px;
@@ -14,6 +15,7 @@
     gap: 20px;
     margin-bottom: 20px;
 }
+
 .discription
 {
     display: flex;
@@ -83,4 +85,14 @@
 }
 .edit_button:hover{
     background-color: rgb(65, 40, 250);
+}
+
+.modal
+{
+    margin: auto;
+}
+.modalContent
+{
+    display: flex;
+    gap: 20px;
 }
